[gd_scene load_steps=2 format=3 uid="uid://habit_activity"]

[ext_resource type="Script" path="res://scripts/HabitActivity.gd" id="1"]

[node name="HabitActivity" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.98, 0.95, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="HabitTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Good Habit"
horizontal_alignment = 1

[node name="HabitIcon" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ðŸŒŸ"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Complete this good habit to earn stars!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 100.0
step = 1.0
value = 0.0
show_percentage = true

[node name="CompleteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Do the Habit!"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Close Game"